test/message/esm_display_syntax_error.out
file:///*/test/message/esm_display_syntax_error.mjs:4
await async () => 0;
^^^^^

SyntaxError: Unexpected reserved word
    at ESMLoader.moduleStrategy (node:internal/modules/esm/translators:*:*)
    at ESMLoader.moduleProvider (node:internal/modules/esm/loader:*:*)
    at async link (node:internal/modules/esm/module_job:*:*)

Node.js *
