test/message/esm_display_syntax_error.mjs
// Flags: --no-harmony-top-level-await

'use strict';
await async () => 0;
